--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,8 @@
     font-size: 2rem;
     font-family: 'Amatic SC', cursive;
     font-style: italic;
-    text-shadow: 1px 1px 0px rgba(0,0,0,0.3);
+    font-weight: 550;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -93,12 +94,24 @@
   }
   .card {
     box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.3);
-    border: 0px
+    border: 0px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    margin-right: 5px;
+    margin-left: 5px;
   }
-
+  
+  @media only screen and (min-width: 600px) {
+    .card-img-top{
+      width: 300px;
+    }
+  }
   /* this is to hide pictures until they are loaded */
-  .card-columns{
+  .deck{
     /*display: none;*/
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
   }
 
 
