--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,6 @@
     opacity: 1;
     font-size: 2rem;
     font-family: 'Amatic SC', cursive;
-    font-style: italic;
     font-weight: 550;
     text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
     position: absolute;
@@ -92,6 +91,21 @@
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
   }
+
+  .updatetext {
+    color: var(--dark1);
+    opacity: 1;
+    font-size: 1rem;
+    font-family: 'Amatic SC', cursive;
+    font-style: italic;
+    font-weight: 600;
+    
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+  }
+
   .card {
     box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.3);
     border: 0px;
